--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
   <meta charset="UTF-8">
   <title>CodePen - Trello Clone</title>
   <link rel="stylesheet" href="./style.css">
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Cairo:wght@600&display=swap" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/132a00f1c0.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -12,47 +17,47 @@
   <div class="list">
     <div class="title removable editable">Product Backlog</div>
     <div class="content">
-      <div class="card removable editable">Perfom the App testing</div>
-      <div class="card removable editable" style="">Look, another card!</div>
-      <div class="card removable editable">Get App Feedback</div>
-      <div class="card removable editable">Traning Buss Drivers </div>
+      <div class="card removable editable">Perfom the App testing<i class="fa-solid fa-mobile-screen-button"></i></div>
+      <div class="card removable editable" style="">Submit App to App Store<i class="fa-solid fa-cloud-arrow-up"></i></div>
+      <div class="card removable editable">Get App Feedback<i class="fa-solid fa-users"></i></div>
+      <div class="card removable editable">Traning Buss Drivers<i class="fa-solid fa-bus"></i></div>
     </div>
     <div class="add-card editable">Add another card</div>
   </div>
   <div class="list">
     <div class="title removable editable">Current Sprint Backlog</div>
     <div class="content">
-      <div class="card removable editable">Chose a development path</div>
-      <div class="card removable editable">Build the App</div>
-      <div class="card removable editable">Market App</div>
+      <div class="card removable editable">Chose a development path<i class="fa-solid fa-address-card"></i></div>
+      <div class="card removable editable">Build the App<i class="fa-solid fa-puzzle-piece"></i></div>
+      <div class="card removable editable">Market the App<i class="fa-solid fa-cart-shopping"></i></div>
     </div>
     <div class="add-card editable">Add another card</div>
   </div>
   <div class="list">
     <div class="title removable editable">In Progress</div>
-    <div class="card removable editable">Define extra Functionalities</div>
-    <div class="card removable editable">Improve App Desing</div>
-    <div class="card removable editable">Meeting more Investors </div>
+    <div class="card removable editable">Define extra Functionalities<i class="fa-solid fa-folder-plus"></i></div>
+    <div class="card removable editable">Improve App Desing<i class="fa-solid fa-palette"></i></div>
+    <div class="card removable editable">Meeting more Investors<i class="fa-solid fa-handshake-simple"></i></div>
     <div class="content"></div>
     <div class="add-card editable">Add another card</div>
   </div>
 </div>
 <div class="list">
-  <div class="title removable editable">Review</div>
-  <div class="card removable editable">Market research</div>
+  <div class="title removable editable">Review </div>
+  <div class="card removable editable">Market research<i class='fas fa-user-friends' style='font-size:36px'></i></div>
   <div class="content"></div>
   <div class="add-card editable">Add another card</div>
 </div>
 <div class="list">
   <div class="title removable editable">Done</div>
-  <div class="card removable editable">Find a Solution for Dublin Buss</div>
-  <div class="card removable editable">Define Functionalities </div>
-  <div class="card removable editable">Desing Wireframes </div>
-  <div class="card removable editable">Research about other Buss App's</div>
-  <div class="card removable editable">Define Desing Team </div>
-  <div class="card removable editable">Find a office for develop team </div>
-  <div class="card removable editable">Settle with investors</div>
-  <div class="card removable editable">Approve App idea</div>
+  <div class="card removable editable">Find a Solution for Dublin Buss<i class="fa-solid fa-magnifying-glass"></i></div>
+  <div class="card removable editable">Define Functionalities <i class="fa-solid fa-crosshairs"></i></div>
+  <div class="card removable editable">Desing Wireframes <i class="fa-solid fa-layer-group"></i></div>
+  <div class="card removable editable">Research about other Buss App's <i class="fa-solid fa-user-secret"></i></div>
+  <div class="card removable editable">Define Desing Team <i class="fa-solid fa-people-group"></i></div>
+  <div class="card removable editable">Find a office for develop team <i class="fa-solid fa-building"></i></div>
+  <div class="card removable editable">Settle with investors<i class="fa-solid fa-sack-dollar"></i></div>
+  <div class="card removable editable">Approve App idea<i class="fa-solid fa-check-double"></i></div>
   <div class="content"></div>
   <div class="add-card editable">Add another card</div>
 </div>
